docs/specs/fixtures/forge-v1/invalid/duplicate-key.forge
#!forge/v1
forge_version: 1
forge_version: 1
schema_ref: urn:forgeroot:forge:agent:v1
kind: agent
